:bug: fix bugs